--- a/app/src/main/res/menu/bottom.xml
+++ b/app/src/main/res/menu/bottom.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/Home"
+        android:icon="@drawable/ai_search"
+        android:title="Home" />
+    <item
         android:id="@+id/Dupli"
 
         android:icon="@drawable/files"
         android:title="Duplicate" />
     <item
-        android:id="@+id/search"
+        android:id="@+id/Conversion"
         android:icon="@drawable/img_serach"
-        android:title="Image Search" />
+        android:title="Conversion" />
+
     <item
-        android:id="@+id/account"
-        android:icon="@drawable/ai_search"
-        android:title="Ai search" />
-    <item
-        android:id="@+id/More"
+        android:id="@+id/Files"
         android:icon="@drawable/menu_burger"
-        android:title="More" />
+        android:title="Files" />
 </menu>
