--- a/app/src/main/res/menu/bottom.xml
+++ b/app/src/main/res/menu/bottom.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/Home"
-        android:icon="@drawable/ai_search"
+        android:icon="@drawable/home"
         android:title="Home" />
     <item
         android:id="@+id/Dupli"
@@ -11,11 +11,13 @@
         android:title="Duplicate" />
     <item
         android:id="@+id/Conversion"
-        android:icon="@drawable/img_serach"
+        android:icon="@drawable/exchange_fotor_2025041920465"
+
         android:title="Conversion" />
 
     <item
         android:id="@+id/Files"
-        android:icon="@drawable/menu_burger"
+        android:icon="@drawable/folder"
+
         android:title="Files" />
 </menu>
