--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,10 @@
         <item name="android:color">#AEACAC</item>
     </style>
     <style name="Theme.Letsdoit" parent="Base.Theme.Letsdoit" />
+    <style name="CardStyle" parent="Widget.MaterialComponents.CardView">
+        <item name="cardElevation">8dp</item>
+        <item name="cardCornerRadius">16dp</item>
+        <item name="strokeColor">@color/surfaceVariant</item>
+        <item name="strokeWidth">1dp</item>
+    </style>
 </resources>
